# projeto-citibike-rafa

./: README.md
demand_forecast/: pyproject.toml
demand_forecast/tests/: test_demand_forecast.py
