[tool.poetry]
name = "demand_forecast"
version = "0.1.0"
description = ""
authors = ["Xavier <rafael.xavier.vital@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.21.0"
pandas = "^1.3.0"
matplotlib = "^3.4.0"
plotly-express = "^0.4.1"
plotly = "^5.18.0"
scikit-learn = "^1.3.2"
xgboost = "^2.0.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
